[gd_scene load_steps=10 format=3 uid="uid://c3poibykmepdb"]

[ext_resource type="Script" path="res://screen_render_texture.gd" id="1_gf5qc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2ny5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfi0x"]

[sub_resource type="Theme" id="Theme_5eiml"]
TextEdit/colors/caret_color = Color(0, 0.631373, 0, 1)
TextEdit/constants/caret_width = 12
TextEdit/styles/read_only = SubResource("StyleBoxFlat_r2ny5")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_hfi0x")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oi3x3"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bc8df"]
bg_color = Color(0.137255, 0.137255, 0.137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kg6l"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)

[sub_resource type="Theme" id="Theme_rv011"]
LineEdit/constants/caret_width = 12
LineEdit/styles/focus = SubResource("StyleBoxFlat_bc8df")
LineEdit/styles/normal = SubResource("StyleBoxFlat_6kg6l")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkfgn"]
bg_color = Color(0, 0, 0, 1)

[node name="ScreenRenderTexture" type="Node2D"]
script = ExtResource("1_gf5qc")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 280.0
offset_bottom = 200.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
own_world_3d = true
handle_input_locally = false
size = Vector2i(380, 300)
render_target_update_mode = 4

[node name="Control" type="Control" parent="SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
offset_right = 67.0625
offset_bottom = 31.0

[node name="TextEdit" type="TextEdit" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5eiml")
theme_override_colors/background_color = Color(0.0605303, 0.0605303, 0.0605303, 1)
theme_override_colors/font_readonly_color = Color(0, 0.631373, 0, 1)
theme_override_colors/font_color = Color(0, 0.631373, 0, 1)
theme_override_colors/caret_background_color = Color(0, 0.631373, 0, 1)
theme_override_colors/caret_color = Color(0, 0.631373, 0, 1)
text = "C:/$ "
editable = false
wrap_mode = 1
caret_blink = true
caret_draw_when_editable_disabled = true

[node name="PanelContainer" type="PanelContainer" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oi3x3")

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewportContainer/SubViewport/Control/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="SubViewportContainer/SubViewport/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0.631373, 0, 1)
text = "enter password"

[node name="PasswordInput" type="LineEdit" parent="SubViewportContainer/SubViewport/Control/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_rv011")
theme_override_colors/caret_color = Color(0, 0.631373, 0, 1)
theme_override_colors/font_color = Color(0, 0.631373, 0, 1)
caret_blink = true
caret_force_displayed = true

[node name="Panel" type="Panel" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kkfgn")

[connection signal="text_changed" from="SubViewportContainer/SubViewport/Control/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="SubViewportContainer/SubViewport/Control/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="SubViewportContainer/SubViewport/Control/PanelContainer/VBoxContainer/PasswordInput" to="." method="_on_password_input_text_submitted"]
